--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 DataBase/Main_Database.ipynb filter=lfs diff=lfs merge=lfs -text
+[[:space:]]DataBase/Dictionary.db filter=lfs diff=lfs merge=lfs -text
+DataBase/Dictionary.db filter=lfs diff=lfs merge=lfs -text
